<resources>
    <string name="app_name">DiaryProject</string>
    <string name="btnSave">저장</string>
    <string name="MenuItemExit">다시 읽기</string>
    <string name="MenuItemDelete">일기 삭제</string>
    <string name="MenuItemTextSize">글씨 크기</string>
    <string name="TextSizeItemLarge">크게</string>
    <string name="TextSizeItemRegular">보통</string>
    <string name="TextSizeItemSmall">작게</string>
</resources>
