<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/MenuItemExit"
        android:title="@string/MenuItemExit"/>
    <item
        android:id="@+id/MenuItemDelete"
        android:title="@string/MenuItemDelete"/>
    <item
        android:id="@+id/MenuItemTextSize"
        android:title="@string/MenuItemTextSize">
        <menu>
            <item
                android:id="@+id/TextSizeItemLarge"
                android:title="@string/TextSizeItemLarge"/>
            <item
                android:id="@+id/TextSizeItemRegular"
                android:title="@string/TextSizeItemRegular"/>
            <item
                android:id="@+id/TextSizeItemSmall"
                android:title="@string/TextSizeItemSmall"/>
        </menu>
    </item>
</menu>